Update the script to calc sleep time based on user input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Sleeptime App</h1>
     <p>If want to fall sleep at...</p>
-    <select>
+    <select id="hh">
       <option>hh</option>
       <option>1</option>
       <option>2</option>
@@ -25,7 +25,7 @@
       <option>12</option>
     </select>
 
-    <select>
+    <select id="mm">
       <option>mm</option>
       <option>00</option>
       <option>05</option>
@@ -41,7 +41,7 @@
       <option>55</option>
     </select>
 
-    <select>
+    <select id="ampm">
       <option>PM</option>
       <option>AM</option>
     </select>
@@ -49,7 +49,7 @@
     <br />
     <br />
 
-    <button onclick="handleOnClick();">CACLUCALATE</button>
+    <button onclick="handleOnClick();">Calc</button>
     <div class="output">
       <p>It takes the average human 14 minutes to fall sleep.</p>
       <p>
